# sevenrad-stills

./: .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  GAUSSIAN_BLUR_GPU_IMPLEMENTATIONS.md  Makefile  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PR_PLAN.md  README.md  benchmark_band_swap.py  benchmark_optimized.py  profile_bayer.py  profile_bayer_detailed.py  profile_buffer_corruption.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pages-deploy.yml  pre-commit.yml  test.yml
config/: default.yaml
docs/: .jekyll-frontmatter-schema.json  EXTENDING.md  FILTER_GUIDE.md  Gemfile  IMPLEMENTATION_PLAN.md  PIPELINE.md  _config.yml  getting-started.md  index.html  index.md  installation.md
docs/_data/: contact.yml  share.yml
docs/_includes/: head.html
docs/_posts/: 2024-01-01-installation.md  2024-01-02-getting-started.md  2024-01-03-operations-compression.md  2024-01-04-tutorial-compression-filters.md  2024-01-05-operations-degradr.md  2024-01-06-tutorial-degradr-effects.md
docs/_sass/color_schemes/: ghost-in-shell.scss
docs/_tabs/: about.md
docs/api/: backend-contract.md
docs/assets/css/: jekyll-theme-chirpy.scss  just-the-docs-ghost-in-shell.scss
docs/design/: keyboard-shortcuts.md
docs/epics/: EPIC-001.md  EPIC-002.md  EPIC-003.md  EPIC-004.md  EPIC-005.md  EPIC-006.md  EPIC-007.md  EPIC-008.md  EPIC-009.md  EPIC-010.md  README.md
docs/mockups/: 02-bank-switching.html  03-step-sequencer.html  04-scene-presets.html  05-advanced-parameters.html
docs/operations/: compression.md  degradr.md  index.md  satellite.md  saturation.md
docs/reference/: filter-guide.md  index.md  pipeline.md
docs/technical_notes/: degradr-operations.md  index.md  satellite-failures.md
docs/tickets/: README.md  TICKET-001.md  TICKET-002.md  TICKET-003.md  TICKET-004.md  TICKET-005.md  TICKET-006.md  TICKET-007.md  TICKET-008.md  TICKET-009.md  TICKET-010.md  TICKET-011.md  TICKET-011b.md  TICKET-011c.md  TICKET-011d.md  TICKET-012.md  TICKET-013.md  TICKET-014.md  TICKET-015.md  TICKET-016.md  TICKET-017.md  TICKET-018.md  TICKET-019.md  TICKET-020.md  TICKET-021.md  TICKET-022.md  TICKET-023.md  TICKET-024.md  TICKET-024A.md  TICKET-025.md  TICKET-026.md  TICKET-027.md  TICKET-028.md  TICKET-029.md  TICKET-030.md  TICKET-031.md  TICKET-032.md  TICKET-033.md  TICKET-034.md  TICKET-035.md  (+26 more)
docs/tutorials/: compression-filters.md  degradr-effects.md  index.md  satellite-malfunctions.md  saturation-variations.md
docs/tutorials/compression-filters/: 01-social-media.yaml  02-glitch-art.yaml  03-vhs-analog.yaml  04-progressive-cascade.yaml  README.md
docs/tutorials/degradr-effects/: 01-vhs-scanlines.yaml  02-sensor-noise.yaml  03-lens-artifacts.yaml  05-soft-glow.yaml  06-dreamy-bokeh.yaml  07-film-grain.yaml  08-vhs-lines.yaml  09-color-shift.yaml  10-digital-mosaic.yaml  README.md
docs/tutorials/satellite-malfunctions/: 01-landsat7-slcoff.yaml  02-early-mission.yaml  03-late-mission.yaml  04-glitch-art.yaml
docs/tutorials/saturation-variations/: 01-grayscale.yaml  02-heavily-muted.yaml  03-subtle-desaturation.yaml  04-moderate-boost.yaml  05-heavy-boost.yaml  06-comparison-grid.yaml
examples/: compression_block_sizes.yaml  flexible_sequence_repeat.yaml  minimal_blur_sequence.yaml  multi_generation_compression.yaml  multi_step_pipeline.yaml  saturation_fixed_pipeline.yaml  saturation_pipeline.yaml  severe_degradation_pipeline.yaml
src/sevenrad_stills/: __init__.py
src/sevenrad_stills/cli/: __init__.py  commands.py
src/sevenrad_stills/download/: __init__.py  downloader.py  metadata.py
src/sevenrad_stills/extraction/: __init__.py  extractor.py  strategies.py
src/sevenrad_stills/metal_kernels/: MetalCompressionArtifact.swift  README.md  build.sh  build.swiftdoc  build.swiftsourceinfo  compression_artifact.metal
src/sevenrad_stills/operations/: LICENSE_DEGRADR.txt  __init__.py  band_swap.py  band_swap_gpu.py  base.py  bayer_filter.py  bayer_filter_gpu.py  bayer_filter_metal.py  bayer_filter_metal_malvar.py  blur_circular.py  blur_circular_gpu.py  blur_gaussian.py  blur_gaussian_gpu.py  blur_gaussian_mlx.py  blur_gaussian_mps.py  buffer_corruption.py  buffer_corruption_gpu.py  buffer_corruption_gpu_optimized.py  buffer_corruption_metal.py  chromatic_aberration.py  chromatic_aberration_gpu.py  compression.py  compression_artifact.py  compression_artifact_gpu.py  compression_artifact_metal.py  compression_gpu.py  compression_metal.py  corduroy.py  corduroy_gpu.py  corduroy_metal.py  downscale.py  downscale_gpu.py  downscale_metal.py  motion_blur.py  motion_blur_gpu.py  motion_blur_metal.py  multi_compress.py  multi_compress_gpu.py  multi_compress_metal.py  noise.py  (+12 more)
src/sevenrad_stills/pipeline/: __init__.py  executor.py  models.py  processor.py  yaml_loader.py
src/sevenrad_stills/storage/: cache.py  (+2 more)
tests/: __init__.py
tests/integration/: __init__.py  pipeline_integration_test.yaml  test_compression_filters_integration.py  test_pipeline_integration.py
tests/unit/: __init__.py
(+76 files in other folders)
